--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
-          class="collapse navbar-collapse justify-content-end padL"
+          class="collapse navbar-collapse justify-content-end"
           id="navbarSupportedContent"
         >
           <ul class="navbar-nav ml-auto">
@@ -148,9 +148,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg ">
-              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
-            </button>
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>
           </div>
         </div>
         <!-- CPR Course  -->
@@ -169,9 +167,7 @@
           </ul>
         </div>
         <div class="card-footer">
-          <button type="button" class="w-100 btn btn-lg ">
-            <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
-          </button>
+            <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>
         </div>
       </div>
         <!-- TB Test -->
@@ -187,9 +183,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg">
-              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
-            </button>
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>
           </div>
         </div>
         <!-- FNP visit -->
@@ -207,9 +201,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg">
-              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>
-            </button>
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>
           </div>
         </div>
         <!-- Notary Public -->
@@ -226,9 +218,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg" >
-              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>      
-            </button>
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>      
           </div>
         </div>
          <!-- Notary Public -->
@@ -245,9 +235,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <button type="button" class="w-100 btn btn-lg" >
-              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;">Sign Up</a>      
-            </button>
+              <a href="mailto:pmercadorn@yahoo.com" style="text-decoration: none; color: inherit;" class="w-100 btn btn-lg">Sign Up</a>      
           </div>
         </div>
       </div>
@@ -259,26 +247,16 @@
         <div class="row">
         <div class="col-sm-5" id="contactinfo"> 
           <p><small>Contact us and we'll get back to you within 24 hours.</small></p>
-      <p><i class='fas fa-map-marker-alt'></i><small> Rio Grande Valley, TX</small></p>
-      <p><span class="glyphicon glyphicon-phone"></span> <small>+1 956-521-0620</small></p>
-      <p><span class="glyphicon glyphicon-envelope"></span> <small>pmercadorn@yahoo.com</small></p>
+      <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-map-fill" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.598-.49L10.5.99 5.598.01a.5.5 0 0 0-.196 0l-5 1A.5.5 0 0 0 0 1.5v14a.5.5 0 0 0 .598.49l4.902-.98 4.902.98a.502.502 0 0 0 .196 0l5-1A.5.5 0 0 0 16 14.5V.5zM5 14.09V1.11l.5-.1.5.1v12.98l-.402-.08a.498.498 0 0 0-.196 0L5 14.09zm5 .8V1.91l.402.08a.5.5 0 0 0 .196 0L11 1.91v12.98l-.5.1-.5-.1z"/>
+      </svg><small> Rio Grande Valley, TX</small></p>
+      <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+      </svg><small> +1 956-521-0620</small></p>
+      <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+      </svg><small> pmercadorn@yahoo.com</small></p>
         </div>
-        <!-- <div class="col-sm-7">
-          <div class="row">
-            <div class="col-sm-6 form-group">
-              <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-            </div>
-            <div class="col-sm-6 form-group">
-              <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-            </div>
-          </div>
-          <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-          <div class="row">
-            <div class="col-sm-12 form-group">
-              <button class="btn btn-default pull-right" type="submit">Send</button>
-            </div>
-      </div>
-    </div> -->
         </div>
         </div>
         
